[package]
name = "aze-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "integration"
path = "tests/integration/main.rs"

[[test]]
name = "e2e"
path = "tests/e2e/test_basic_e2e.rs"

[dependencies]
ansi_term = "0.12.1"
actix-web = "^4"
uuid = { version = "1.6.1", features = ["serde", "v4"], optional = true }
serde = { version = "^1", features = ["derive"] }
env_logger = "0.8"
log = "^0.4"
strum_macros = "^0.24"
strum = { version = "^0.24", features = ["derive"] }
derive_more = "^0.99"
tokio = { version = "1.29", features = ["rt-multi-thread", "net", "macros"] }
aze-lib = { path = "../lib" }
aze-types = { path = "../types" }
miden-lib = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "main", version = "0.2", features= ["concurrent","testing"] }
miden-tx = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "main", version = "0.2.3" }
# miden-objects = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "main", version = "0.1", default-features = false  }
miden-client = { git = "https://github.com/0xPolygonMiden/miden-client.git", branch = "main", features= ["concurrent","testing"] }
miden-objects = { version = "0.2", features = ["serde"] }

[build-dependencies]
miden-assembly = { git = "https://github.com/0xPolygonMiden/miden-vm.git", branch = "main" }

[dev-dependencies]
miden-crypto = { version = "0.9", default-features = false }